<resources>
    <string name="app_name">Дневник\nтренировок</string>
    <string name="activity_start_head">Тренировочный дневник</string>
    <string name="activity_start_new_training">Новая тренировка</string>
    <string name="activity_start_diary">Дневник</string>
    <string name="activity_start_exercise_base">База упражнений</string>
    <string name="fragment_dialog_registration_button">Регистрация</string>
    <string name="fragment_dialog_login_button">Вход</string>
    <string name="fragment_dialog_cancel_button">Назад</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="enter_your_email">Введите ваш email</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="re_enter_your_password">Повторите пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="log_in">Войти</string>
    <string name="incorrect_email_registration">Вы ввели неправильный email.</string>
    <string name="fill_all_fields">Заполните все поля ввода.</string>
    <string name="login_register_response_error">Ошибка запроса на сервер.</string>
    <string name="login_register_network_error">Ошибка сети. Проверьте подключение к интернету</string>
    <string name="login_done">Вход выполнен успешно.</string>
    <string name="registration_done">Регистрация выполнена успешно.</string>
    <string name="re_enter_password_incorrect">В подтверждении пароля допущена ошибка.</string>
    <string name="fragment_new_exercise_title_hint">Название упражнения</string>
    <string name="fragment_new_exercise_description_hint">Описание упражнения</string>
    <string name="fragment_new_exercise_add_button">Добавить</string>
    <string name="fragment_new_exercise_back_button">Назад</string>
    <string name="fragment_new_exercise_clear_button">Очистить</string>
    <string name="training_title">Название тренировки</string>
    <string name="exercise_base">База упражнений</string>
    <string name="exercise_description">Описание упражнения</string>
    <string name="add_new_exercise">Новое упражнение</string>
    <string name="exercise_category_description">Категория упражнения (группа мышц)</string>
    <string name="quantity_approaches">Количество подходов: </string>
    <string name="quantity_approaches_over_limit">Уважаемый пользователь, от такого количества подходов вас может
    разорвать на части, выберете меньшее количество подходов (менее 12)</string>
    <string name="make_choise_of_approaches_quantity">Введите количество подходов</string>
    <string name="exercises_order">Порядок упражнений в тренировке</string>
    <string name="order_in_training">Порядок упражнения в тренировке: </string>
    <string name="approach">Подход </string>
    <string name="choose_exercises_for_training">Выберите упражнения для тренировки.</string>
    <string name="enter_training_title">Введите название тренировки.</string>
    <string name="exit">Выход</string>
    <string name="end_training">Завершение тренировки</string>
    <string name="kg">Кг</string>
    <string name="times">раз</string>
    <string name="repeats">Повторений: </string>
    <string name="do_you_want_exit_from_training">Вы действительно хотите покинуть тренировку?</string>
    <string name="do_you_want_exit_from_app">Вы действительно хотите покинуть приложение?</string>
    <string name="fill_all_fields_of_order_exercises">Заполните все поля ввода или проверьте корректность введённых значений.</string>
    <string name="do_you_want_end_training">Завершит тренировку?</string>
    <string name="training">Тренировка</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ARMS">Руки</string>
    <string name="LEGS">Ноги</string>
    <string name="SHOULDERS">Плечи</string>
    <string name="BACK">Спина</string>
    <string name="CHEST">Грудь</string>

</resources>
