<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size25"
        android:textStyle="bold"
        android:textColor="@color/blue_bright"
        android:text="@string/registration"
        android:layout_marginBottom="@dimen/large_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/email_registration_et"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/very_small_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/password_registraion_et"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/very_small_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/password_reenter_registration_et"
        android:inputType="textPassword"
        android:hint="@string/re_enter_your_password"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/very_small_padding"/>
    <Button
        android:layout_marginTop="@dimen/large_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="@color/red_bright"
        android:textSize="@dimen/standard_text_size15"
        android:textStyle="bold"
        android:id="@+id/register_b"/>
    <ProgressBar
        android:layout_width="@dimen/size_45_dp"
        android:layout_height="@dimen/size_45_dp"
        android:visibility="invisible"
        android:layout_gravity="bottom|center"
        android:id="@+id/activity_registration_pb"/>

</LinearLayout>