<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size25"
        android:textStyle="bold"
        android:textColor="@color/green_bright"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/large_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/email_login_et"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textSize="@dimen/standard_text_size20"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/very_small_padding"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/password_login_et"
        android:inputType="textPassword"
        android:textSize="@dimen/standard_text_size20"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/very_small_padding"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/large_padding">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textColor="@color/green_normal"
            android:textSize="@dimen/standard_text_size15"
            android:id="@+id/activity_login_login_b"
            android:gravity="center"
            android:textStyle="bold"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/registration"
            android:textColor="@color/red_bright"
            android:textSize="@dimen/standard_text_size15"
            android:id="@+id/activity_login_register_b"
            android:layout_marginLeft="@dimen/start_activity_padding"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>
    <ProgressBar
        android:layout_width="@dimen/size_45_dp"
        android:layout_height="@dimen/size_45_dp"
        android:visibility="invisible"
        android:layout_gravity="bottom|center"
        android:id="@+id/activity_login_pb"/>

</LinearLayout>